Fix vertical alignment in h1

--- a/src/css/doc.css
+++ b/src/css/doc.css
@@ -146,6 +146,10 @@ body {
     font-weight: 600;
   }
 
+  .doc .header-label-container > div.labels {
+    padding-top: 0;
+  }
+
   .doc h2:not(.discrete) {
     font-size: 1.2rem;
   }
