--- a/src/css/labels.css
+++ b/src/css/labels.css
@@ -16,6 +16,7 @@
   justify-content: space-between;
   gap: 0.25rem;
   margin-left: auto;
+  padding-top: 0.4rem;
   line-height: var(--doc-line-height);
 }
 
